# tinkubot-microservices

./: .env.example  .flake8  .gitignore  .prettierignore  .prettierrc  AGENTS.md  AUDIT_ARCHITECTURE.md  AUDIT_VERIFICACION_POST_REFACTOR.md  CLAUDE.md  DEFINICIONES_CLAVE.md  ENVIRONMENT_MAPPING.md  Makefile  QA_VARIABLES_MAPPING.md  README.md  REMOTEAUTH_READY_EVENT_FIX.md  SECURITY.md  SUPABASE_MCP_GUIDE.md  VALIDATORS_README.md  bandit.yaml  docker-compose.yml  eslint.config.js  mypy.ini  package-lock.json  package.json  pyproject.toml  setup-husky.sh  validate_all.sh  validate_docker.py  validate_elixir.sh  validate_go.sh  validate_nodejs.sh  validate_quality.py  validate_quality_code.py
audits/: 2026-04-17-dependencias-transversales-ai-proveedores.md  ARCHITECTURE_AUDIT.md  EXECUTION_PLAN.md
docs/: .gitignore  OPERATIONS.md  (+26 more)
rust-services/onboarding/: Cargo.toml  Dockerfile
rust-services/onboarding/src/: config.rs  errors.rs  events.rs  flow.rs  logic.rs  main.rs  middleware.rs  models.rs  normalize.rs  openai.rs  router.rs  store.rs  supabase.rs
rust-services/onboarding/src/handlers/: add_service.rs  city.rs  confirm.rs  consent.rs  dni_front_photo.rs  experience.rs  face_photo.rs  mod.rs  photo_upload.rs  real_phone.rs  social_media.rs  specialty.rs
rust-services/onboarding/src/normalize/: experience.rs  image.rs  mod.rs  phone.rs  security.rs  social_media.rs  text.rs
rust-services/onboarding/src/templates/: add_service.rs  city.rs  confirm.rs  consent.rs  dni_front.rs  experience.rs  face_photo.rs  mod.rs  real_phone.rs  social_media.rs  specialty.rs
(+1121 files in other folders)
