[package]
name = "onboarding"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["timeout", "limit", "request-id", "trace", "util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
deadpool-redis = "0.18"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
thiserror = "2"
validator = { version = "0.19", features = ["derive"] }
envy = "0.4"
uuid = { version = "1", features = ["v4"] }
subtle = "2"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
url = "2"
